--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [3.11, 3.10]
+        python-version: [3.11, 3.10, 3.15]
     timeout-minutes: 30
 
     steps:
