--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix['python-version'] }}
-          cache: 'pip'
+          check-latest: false
+          update-environment: true
 
       - name: Install dependencies (upgrade pip)
         shell: bash
